@@ -1,3 +1,13 @@
+2009/02/04 (TS):
+ - lanIpBasic.c:
+    o BUGFIX: getrbuf() dereferenced NULL pointer if no buffers
+      were available.
+    o Added counter for #of times getrbuf() failed due to lack of buffers.
+    o verify that destination IP is on same subnet as interface. Let
+      'arpLookup()' return -ENETUNREACH otherwise. This affects udpSock
+      calls like udpSockConnect(), udpSockSendTo(), udpSockSendBufTo().
+    o pass return status of udpSockHdrsInitFromIf() on rather than returning
+      -ENOTCONN if the call fails.
 2009/01/06 (TS):
  - lanIpBasic.h, lanIpBasic.c, lanIpBasicTest.c, drvUdpSock.c: Added 'flags'
    argument to udpSockConnect() and a UDPSOCK_MCPASS flag. When this is set
